--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>net.daw</groupId>
-    <artifactId>openAUSIAS-ted</artifactId>
+    <artifactId>ghoulSC</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
-    <name>openAUSIAS-ted</name>
+    <name>ghoulSC</name>
 
 
     <properties>
